tests/error_messages/error_messages.exp
Error --------------------------------------------------------------------------------------------------- errors.js:1:12

Cannot resolve name `define`. [cannot-resolve-name]

   1| if (typeof define === 'function' && define.amd) { }
                 ^^^^^^


Error --------------------------------------------------------------------------------------------------- errors.js:1:37

Cannot resolve name `define`. [cannot-resolve-name]

   1| if (typeof define === 'function' && define.amd) { }
                                          ^^^^^^


Error ------------------------------------------------------------------------------------------- long_string_use.js:6:1

Cannot cast `long_lit` to string literal `aaaaaaaaaaaaaaaaaaaaa` because string [1] is incompatible with string literal
`aaaaaaaaaaaaaaaaaaaaa` [2] because strings longer than `20` characters are not treated as literals. [incompatible-type]

   long_string_use.js:6:1
   6| long_lit as 'aaaaaaaaaaaaaaaaaaaaa'; // error
      ^^^^^^^^

References:
   long_string_lit.js:4:18
   4| const long_lit = 'aaaaaaaaaaaaaaaaaaaaa';
                       ^^^^^^^^^^^^^^^^^^^^^^^ [1]
   long_string_use.js:6:13
   6| long_lit as 'aaaaaaaaaaaaaaaaaaaaa'; // error
                  ^^^^^^^^^^^^^^^^^^^^^^^ [2]



Found 3 errors
